src/test/ui/error-codes/E0664.stderr
error[E0664]: clobber should not be surrounded by braces
  --> $DIR/E0664.rs:7:12
   |
LL |          : "{eax}"
   |            ^^^^^^^

error: aborting due to previous error

